mdapi_output_dir/objects/SSD_Disk__c.object
<CustomObject>
    <label>SSD Disk</label>
    <nameField>
        <label>SSD Disk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSD Disks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_interface__c</fullName>
        <label>Connection interface</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formfactor__c</fullName>
        <label>Formfactor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inner</fullName>
                </value>
                <value>
                    <fullName>Outer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>